portfolio/src/main/webapp/style.css
* {
  box-sizing: border-box;
}

textarea {
  resize: vertical;
  width: 100%;
  height: 200px;
}

.comment {
  background-color:#cbe4fa;
  border-style: solid;
  border-width: thin;
  border-radius: 20px;
  width: 30%;
}

.comment h4 {
  font-weight: bold;
  padding: 10px;
}

.comment h5 {
  padding: 10px;
}

.custom-select {
    position: relative;
    font-family: Calibri;
    background-color: #ddd;
    color: black;
    width: 10%;
    height: 25px;
}

.custom-select:hover {
    cursor: pointer;
}

.custom-select select {
  display: none; /*hide original SELECT element: */
}


body {
  font-family: Calibri;
  animation: fadeInAnimation ease 3s;
  animation-iteration-count: 1; 
  animation-fill-mode: forwards; 
  background-color: white;
  margin: 0;
}
  
@keyframes fadeInAnimation { 
  0% { 
    opacity: 0; 
  } 
  100% { 
    opacity: 1; 
  } 
} 

img {
  max-width: 80%;
  max-height: 80%;
  display: block; /* remove extra space below image */
}

.header {
  padding: 10px;
  text-align: left;
  background: #666;
  color: white;
  font-size: 30px;
}

.header.h1 {
  font-size: large;
}

.main {
  max-width: 1000px;
  margin: auto;
}

h1 {
  font-size: 50px;
  word-break: break-all;
}

.title {
  text-align: center;
}

.row {
  margin: 8px -16px;
}

.row,
.row > .column {
  padding: 8px;
}

.jumbotron {
  background-color: white;
  color: white;
}

.column {
  float: left;
  width: 25%;
}

.row:after {
  content: "";
  display: table;
  clear: both;
}

.flex-parent {
  display: flex;
}

.flex-child {
  background-color: white;
  flex: 1;
  color: white;
}

.content {
  background-color: white;
  padding: 10px;
}

.container {
  background-color: white;
  padding: 10px;
}

@media screen and (max-width: 900px) {
  .column {
    width: 50%;
  }
}

@media screen and (max-width: 600px) {
  .column {
    width: 100%;
  }
}

* {
  box-sizing: border-box;
}

.icon {
  max-width: 10%;
  max-height: 10%;
  display: block;
  transition: .5s ease;
}

.icon:hover {
  cursor: pointer;
  opacity: 0.3;
}

#footerlist li {
  list-style: none;
  text-decoration:none;
  display:inline-block;  
  float:right;
  position: relative;
}


/* Center website */
.main {
  max-width: 1000px;
  margin: auto;
}

h1 {
  font-size: 50px;
  word-break: break-all;
}

.row {
  margin: 8px -16px;
}

/* Add padding BETWEEN each column (if you want) */
.row,
.row > .column {
  padding: 8px;
}

/* Create three equal columns that floats next to each other */
.column {
  float: left;
  width: 33.33%;
  display: none; /* Hide columns by default */
}

/* Clear floats after rows */
.row:after {
  content: "";
  display: table;
  clear: both;
}

/* Content */
.content {
  background-color: white;
  padding: 10px;
}

/* The "show" class is added to the filtered elements */
.show {
  display: block;
  animation: fadeInAnimation ease 3s;
  animation-iteration-count: 1; 
  animation-fill-mode: forwards; 
}

/* Style the buttons */
.btn {
  border: none;
  outline: none;
  padding: 12px 16px;
  background-color: white;
  cursor: pointer;
}

/* Add a grey background color on mouse-over */
.btn:hover {
  background-color: #ddd;
}

/* Add a dark background color to the active button */
.btn.active {
  background-color: #666;
  color: white;
}

/* Fixed/sticky icon bar (vertically aligned 50% from the top of the screen) */
.icon-bar {
  position: fixed;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

/* Style the icon bar links */
.icon-bar a {
  display: block;
  text-align: center;
  padding: 16px;
  transition: all 0.3s ease;
  color: white;
  font-size: 20px;
}

/* Style the social media icons with color, if you want */
.icon-bar a:hover {
  background-color: rgb(255, 255, 255);
}

.instagram {
  background: rgb(204, 171, 122);
  color: white;
}

gallery {
  float: left;
  object-fit: cover;
}

.linkedin {
  background: #007bb5;
  color: white;
}

.github {
  background: #919597;
  color: white;
}

.email {
  background: #48cfa7;
  color: white;
}

.lock {
  background: #f44336;
  color: white
}

.col-container {
  display: table; /* Make the container element behave like a table */
  width: 100%; /* Set full-width to expand the whole page */
}

.col {
  display: table-cell; /* Make elements inside the container behave like table cells */
}

/* Full-width input fields */
input[type=text], input[type=password] {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  box-sizing: border-box;
}

/* Set a style for all buttons */
.login {
  background-color: #666;
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  cursor: pointer;
  width: 100%;
}

.login:hover {
  opacity: 0.8;
}

/* Extra styles for the cancel button */
.cancelbtn {
  width: auto;
  padding: 10px 18px;
  background-color: #f44336;
}

/* Center the image and position the close button */
.imgcontainer {
  text-align: center;
  margin: 24px 0 12px 0;
  position: relative;
}

img.avatar {
  width: 40%;
  border-radius: 50%;
}

.container2 {
  padding: 16px;
}

span.psw {
  float: right;
  padding-top: 16px;
}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  padding-top: 60px;
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
  border: 1px solid #888;
  width: 80%; /* Could be more or less, depending on screen size */
}

/* The Close Button (x) */
.close {
  position: absolute;
  right: 25px;
  top: 0;
  color: #000;
  font-size: 35px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: red;
  cursor: pointer;
}

/* Add Zoom Animation */
.animate {
  -webkit-animation: animatezoom 0.6s;
  animation: animatezoom 0.6s
}

@-webkit-keyframes animatezoom {
  from {-webkit-transform: scale(0)} 
  to {-webkit-transform: scale(1)}
}
  
@keyframes animatezoom {
  from {transform: scale(0)} 
  to {transform: scale(1)}
}

/* Change styles for span and cancel button on extra small screens */
@media screen and (max-width: 300px) {
  span.psw {
     display: block;
     float: none;
  }
  .cancelbtn {
     width: 100%;
  }
}

